fixed: 修复没有 scrollbar 问题

--- a/src/index.css
+++ b/src/index.css
@@ -63,20 +63,3 @@ body {
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
-::-webkit-scrollbar {
-    width: 4px;
-    background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-    width: 4px;
-    border-radius: 4px;
-    @apply bg-gray-600;
-}
-/* 滚动条轨道 */
-::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-::-webkit-scrollbar-corner {
-    background: transparent; /* 右下角重合处的样式*/
-}
